# churn-prediction-ml

./: .gitignore  Makefile  README.md  comp.MD  pyproject.toml  pytest.ini  testPreprocess.py
data/processed/: telco_clean.csv
docs/: ARQUITETURA_DEPLOY.md  MODEL_CARD.md  MONITORAMENTO.md
modeldumps/: decisiontree.joblib  gradientboosting.joblib  mlp_batch128.pt  mlp_batch16.pt  mlp_batch32.pt  mlp_batch64.pt  mlp_batch8.pt  mlp_lr0.1.pt  mlp_lr0.1_bs64.pt  mlp_lr01.pt  mlp_lr0_001_bs64.pt  mlp_lr0_01_bs64.pt  mlp_lr0_01_bs64patience10.pt  mlp_lr0_01_bs64patience3.pt  mlp_lr0_01_bs64patience5.pt  mlp_lr0_1_bs64.pt  mlp_lr1.0_bs64.pt  mlp_lr1.pt  mlp_lr1_bs64.pt  pipeline_mlp_lr0_01_bs64_patience10.joblib  preprocessor.joblib
models/: dummyclassifier.joblib  logisticregression.joblib
notebooks/: eda.html  eda.ipynb  mlpXbaselines.ipynb
src/churn_prediction/api/: main.py  middleware.py  schemas.py
src/churn_prediction/inference/: predictor.py
src/churn_prediction/pipelines/: preprocessing.py
src/churn_prediction/utils/: logging.py
src/data/: preprocess.py
src/models/: arqMlp.py  arq_mlp.py  trainBaseline.py  trainMlp.py  train_baseline.py
src/utils/: logging.py
tests/: test_api.py  test_hello.py  test_schema.py  test_smoke.py
