[project]
name = "churn-ml"
version = "0.1.0"
description = "Rede neural para previsão de churn com pipeline profissional end-to-end"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "jupyter",
    "joblib",
    "openpyxl",
    "mlflow",
    "torch",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pandera",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --tb=short"